<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.aurawin</groupId>
    <artifactId>scs</artifactId>
    <version>2017.6.20.0</version>
    <properties>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.aurawin</groupId>
            <artifactId>core</artifactId>
            <version>2018.2.21.6</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>aurawin</id>
            <name>aurawin</name>
            <url>http://au2.aurawin.com:8081/repository/aurawin</url>
        </repository>
    </repositories>
    <profiles>
        <profile>
            <id>Build</id>
            <build>
                <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
                <resources>
                    <resource>
                        <directory>${basedir}/src/main/resources/</directory>
                        <filtering>false</filtering>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.5.1</version>
                        <configuration>
                            <source>1.9</source>
                            <target>1.9</target>
                            <showDeprecation>true</showDeprecation>
                            <showWarnings>true</showWarnings>
                            <fork>true</fork>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>